feat(sw): add service worker

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="status">Connecté</div>
-    <script src="sw.js"></script>
+    <script src="serviceCall.js"></script>
 </body>
 </html>
